--- a/Small Biz Website/css/B5_style.css
+++ b/Small Biz Website/css/B5_style.css
@@ -9,3 +9,102 @@ div#container{
     width:1024px;
     background-color:orange;
 }
+
+header{
+    display:block;
+    width:100%;
+    height:150px;
+    background-color:lightgreen;
+    border:2px dotted green;
+    margin:0;
+    padding:0;
+}
+
+header h1 {
+    color:purple;
+    text-shadow: 1px 1px 1px orange;
+    text-align: center;
+    margin-top:50px;
+}
+nav{
+    float:left;
+    width:100%;
+    background-color:black;
+    margin:0;
+    padding:0;
+    clear:both;
+}
+
+ nav ul{
+    margin:0;
+    padding:0;
+    list-style: none;
+    color:white;
+}
+
+nav ul li{
+    float:left;
+}
+
+nav ul li a{
+    display:block;
+    text-decoration:none;
+    color:white;
+    text-align: center;
+    padding: 14px 16px
+}
+
+nav ul li a:hover {
+    background-color: blueviolet;
+}
+
+.keepOpen{
+    clear:both;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
