--- a/Small Biz Website/css/style.css
+++ b/Small Biz Website/css/style.css
@@ -1,5 +1,7 @@
 /* Stylesheet for Crazy Bob's Pumpkin Patch Website */
 
+
+/* Global Style */
 body{
     background-color:#000;
 }
@@ -22,14 +24,14 @@ header{
 
 header h1 {
     color:purple;
-    text-shadow: 1px 1px 1px orange;
+    text-shadow: 1px 1px 1px #ffa500;
     text-align: center;
     margin-top:50px;
 }
 nav{
     float:left;
     width:100%;
-    background-color:black;
+    background-color:#000;
     margin:0;
     padding:0;
     clear:both;
@@ -58,10 +60,55 @@ nav ul li a:hover {
     background-color: blueviolet;
 }
 
+nav .active{
+    background-color:#FF530D;
+}
+
+#content{
+    width:100%    
+}
+
 .keepOpen{
     clear:both;
 }
 
+footer{
+    width:100%;
+    background-color: black;
+    color:orange;
+    text-align:center;
+}
+
+/* index.html style */
+#h2-main{
+    float:left;
+    width:60%;
+    color:brown;
+    text-shadow:1px 1px 1px lime 
+        ;
+    margin-left:10px
+}
+
+#imgMain{
+    display: block;
+    width:350px;
+    margin:10px;
+    border:5px brown outset;
+    float:left;
+    /* 
+    margin-top:3px;
+    margin-right:20px;
+    margin-bottom:5px;
+    margin-left:10px;
+    */
+    
+}
+
+#p-main{
+    width:640px;
+    float:left;
+    
+}
 
 
 
