--- a/Small Biz Website/css/style.css
+++ b/Small Biz Website/css/style.css
@@ -152,7 +152,7 @@ p#p-about{
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    border:3px dotted green;
+/*    border:3px dotted green;*/
     width:100%;
     
 }
@@ -189,11 +189,15 @@ figcaption{
 /* contact.html */
 h2#h2-contact{
     margin:15px;
+    float:left;
    
 }
+
 form#form-contact{
+    display:block;
+    float:left;
     margin-left:15px;
-    
+    clear:left;
     
 }
 
@@ -208,10 +212,19 @@ form textarea{
 }
 
 button{
-        
+    width:80px;
+    height:30px;
+    margin-bottom:5px;
+    background-color: black;
+    color:orange;
+    
 }
 
-
+div#map{
+    margin-top:0;
+    margin-right:20px;
+    float:right;
+}
 
 
 
