--- a/Small Biz Website/css/style.css
+++ b/Small Biz Website/css/style.css
@@ -1,4 +1,4 @@
-/* Stylesheet for Crazy Bob's Pumpkin Patch Website */
+/* B5 Stylesheet for Crazy Bob's Pumpkin Patch Website */
 
 
 /* Global Style */
